Allow more space to ensure overflow of content area is not required 🐿 v2.12.5

--- a/main.scss
+++ b/main.scss
@@ -59,7 +59,7 @@
 		right: 42px;
 		bottom: 36px;
 		width: 300px;
-		height: 286px;
+		height: 300px;
 	}
 
 	.n-feedback__desktop__prompt {
@@ -179,7 +179,7 @@
 		border: 1px solid oColorsByName('slate');
 		border-left: none;
 		border-right: none;
-		padding: 10px;
+		padding: 16px 0;
 
 		legend {
 			@include oNormaliseVisuallyHidden;
